--- a/game/exam01.html
+++ b/game/exam01.html
@@ -118,7 +118,7 @@
 
 <body>
     <div id="container">
-        <img id="meong" src="src/doggy.png" alt="">
+        <img id="meong" src="src/fox.gif" alt="">
     </div>
 </body>
 
