--- a/game/braveDoggyHari.html
+++ b/game/braveDoggyHari.html
@@ -10,9 +10,9 @@
     <!-- 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Haris-walk/style.css" />
     <!-- jquery -->
-    <script src="game-util.js"></script>
+    <script src="Haris-walk/game-util.js"></script>
 </head>
 
 <body>
