--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 버전에 따라 link 색깔 파랑 그대로일 수도 있음. 팀작업시 버전맞추기 유의! -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>Welcome to Harine Shopping Mall</h1>
-    <h3>welcome to Web Market</h3>
+    <header>
+        <!-- navbar-dark와 bg-dark를 둘 다 넣어야 글자가 알아서 흰색으로 변하네 -->
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="">HOME</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="p-3 bg-primary text-white">
+        <div class="container">
+            <h1 class="display-3">Welcome to Harine Shopping Mall</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="text-center">
+            <h3>welcome to Web Market</h3>
+        </div>
+        <!-- 레이아웃 밖으로 안 삐져나가는 수평선 추가 -->
+        <hr>
+    </div>
+    <footer class="container">
+        <!-- 카피라이트 로고삽입 -->
+        &copy;이하리네
+    </footer>
 
     
 </body>
