--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- 버전에 따라 link 색깔 파랑 그대로일 수도 있음. 팀작업시 버전맞추기 유의! -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <header>
         <!-- navbar-dark와 bg-dark를 둘 다 넣어야 글자가 알아서 흰색으로 변하네 -->
@@ -30,6 +35,16 @@
         <div class="text-center">
             <h3>welcome to Web Market</h3>
         </div>
+
+        <div>
+            <hr>
+            <div class="row">
+                <div class="col text-center">슈퍼하리오</div>
+                <div class="col text-center">이하리의 문단속</div>
+                <div class="col text-center">가디언즈오브이하리</div>
+            </div>
+        </div>
+
         <!-- 레이아웃 밖으로 안 삐져나가는 수평선 추가 -->
         <hr>
     </div>
@@ -38,6 +53,7 @@
         &copy;이하리네
     </footer>
 
-    
+
 </body>
+
 </html>
