--- a/async/exam05.html
+++ b/async/exam05.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie List</title>
+    <title>Hari Cine, Ma Igeo Boatna</title>
 
     <!-- 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -16,7 +16,7 @@
 </head>
 
 <body onload="loadMovies()">
-    <header>movie list</header>
+    <header>Hari Cine, Ma Igeo Boatna</header>
     <div id="container"></div>
 
 
@@ -25,7 +25,11 @@
         //영화정보 받아오기(https://api.themoviedb.org)
         async function loadMovies() {
             const response = await fetch('https://api.themoviedb.org/3/movie/upcoming?api_key=a64533e7ece6c72731da47c9c8bc691f&language=ko-KR&page=1');
+
+            //fetch에서 데이터 받아오기
             const data = await response.json();
+
+            //다수의 영화 저장
             const movies = data.results;
 
 
@@ -47,7 +51,7 @@
                 const movieId = $(this).data('movieid');
                 
 
-                location.href = `https://www.themoviedb.org/movie/${movieId}`;
+                location.href = `exam05-2.html?movieId=${movieId}`;
             });
         }
     </script>
