--- a/async/exam01.html
+++ b/async/exam01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>클릭 버튼으로 데이터 불러오기</title>
     <!-- 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
