--- a/async/exam03.html
+++ b/async/exam03.html
@@ -5,20 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>클릭없이 바로 화면에 출력</title>
+    <title>body onload로 다수의 데이터를 화면에 출력</title>
     <!-- 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
-        // async function loadDoc() {
-
-        //     const response = await fetch('https://jsonplaceholder.typicode.com/todos/1');
-
-        //     const json = await response.json();
-
-        //     $('ul').append(`<li>${json.title}</li>`);
-        // }
-
         async function loadList() {
             const response = await fetch('https://jsonplaceholder.typicode.com/todos/');
 
@@ -42,7 +33,6 @@
 </head>
 
 <!-- 첫번째 방법, body에서 onload -->
-
 <body onload="loadList()">
 </body>
 <ul>
